pts-core: Add PTS_EXTRA_SYSTEM_LOGS_DIR environment variable to allow pointing to directory of extra system log files
pts-core: Add RepositoryURL option for test profiles
phodevi: Intel Linux graphics string reporting improvement
phoromatic: Treat set context scripts as a file rather than executing it as a buffer
phodevi: Add some new properties, port some pts_network info to phodevi interfaces
system_monitor: Adjust perf-per precision

Phoronix Test Suite 10.4.0 Milestone 1
17 March 2021

pts-core: Optimize out sorting percentile values array excess times
pts-core: Optimization to avoid re-parsing test profile definition multiple times
pts-core: Optimization to avoid re-parsing installed test metadata multiple times
pts-core: Allow longer HTTP timeouts on OpenBenchmarking.org result uploads if needed
pts-core: Allow sorting runs within a result file from within the result viewer web interface

Phoronix Test Suite 10.2.2
17 February 2021

pts-core: Add helper text when hitting a download with no working mirrors
pts-core: Various external dependency updates
pts-core: Add enable-repo sub-command for more easily enabling new OpenBenchmarking.org repos
pts-core: Result viewer fix for the limit drop down menu potentially not being activated in some cases
pts-core: Allow renaming runs within the result viewer
phoromatic: Ensure pcntl_signal is present before starting Phoromatic Server
phoromatic: PHP 8 compatibility fixes
phodevi: Fix display driver name potentially being reported inaccurate for some obscure graphics cards / driver configurations
phodevi: Export current GPU graphics card PCI device ID (GPU_DEVICE_ID) for some games/tests relying on it for configuration

Phoronix Test Suite 10.2.1
1 February 2021

pts-core: Add "InstallRequiresInternet" option for test profiles that is more narrow (install time only) than the existing "RequiresInternet"
pts-core: Add check-tests sub-command
pts-core: Fix possible crash on PDF output